# bridge-sdk-samples

./: .gitignore  readme.md
BridgeInProcSample/: BridgeInProcSample.csproj  BridgeInProcSample.sln  main.cs
BridgeInProcSample/Properties/: launchSettings.json
BridgeInProcSampleDX11/: DX11.sln
BridgeInProcSampleDX11/Algorithms/: CohenSutherland.cs  packages.config
BridgeInProcSampleDX11/BoxDemo/: 2-BoxDemo.csproj  Program.cs
BridgeInProcSampleDX11/Core/: Core.csproj  InputLayoutDescriptions.cs
BridgeInProcSampleDX11Interactive/: DX11.sln
BridgeInProcSampleDX11Interactive/Algorithms/: Algorithms.csproj
BridgeInProcSampleDX11Interactive/BoxDemo/: 2-BoxDemo.csproj  NativeMethods.cs  Program.cs  packages.config
BridgeInProcSampleDX11Interactive/Core/: InputLayouts.cs
BridgeInProcSampleDX12/: .editorconfig
BridgeInProcSampleDX12/Common/: Common.csproj  D3DApp.cs  D3DUtil.cs  GeometryGenerator.cs  MeshGeometry.cs
BridgeInProcSampleDX12Interactive/: BridgeInProcSampleDX12 Solution.sln  Directory.Build.props
BridgeInProcSampleDX12Interactive/Common/: Camera.cs  (+4 more)
BridgeInProcSampleNative/: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cpp  ogl.h
BridgeInProcSampleNativeInteractive/: CMakeLists.txt  README.md  licence.txt  main.cpp
BridgeInProcSampleOSX/: BridgeInProcSampleOSX.csproj  BridgeInProcSampleOSX.sln  Program.cs
BridgeInProcSampleOSXMetal_x86_64/: Metal2Samples.sln
BridgeRuntime/: BridgeInProc.cs  LKGCamera.h  PixelFormats.h  bridge.h  bridge_utils.hpp  callbacks.h
BridgeSDKSample/: BridgeSDK.cs  BridgeSDKSample.csproj  BridgeSDKSample.sln  LKGCamera.cs  main.cs
BridgeSDKSampleDX11/: DX11.sln
BridgeSDKSampleDX11Interactive/: DX11.sln
BridgeSDKSampleDX12/: BridgeInProcSampleDX12 Solution.sln
BridgeSDKSampleMetalNativeInteractive/: CMakeLists.txt
BridgeSDKSampleMetalNativeInteractive/metal-cmake/metal-cpp-extensions/AppKit/: AppKitPrivate.hpp  NSWindow.hpp
BridgeSDKSampleMetalNativeInteractive/src/learn-metal/06-lighting/: 06-lighting.cpp
BridgeSDKSampleNative/: CMakeLists.txt  main.cpp  mesh.h  ogl.h  shader.h  texture.h
BridgeSDKSampleNative/Assets/: default.frag.glsl  default.vert.glsl
BridgeSDKSampleNative/GL/: glcorearb.h
BridgeSDKSampleNativeInteractive/: CMakeLists.txt  CMakeSettings.json  main.cpp  ogl.h
BridgeSDKSampleOSX/: BridgeSDKSampleOSX.csproj  BridgeSDKSampleOSX.sln  Program.cs
BridgeSDKSampleOSXMetal_x86_64/: Metal2Samples.sln
(+54 files in other folders)
